setuptools-scm in tox + long_description_format specified

--- a/tox.ini
+++ b/tox.ini
@@ -79,6 +79,7 @@ allowlist_externals = make
 [testenv:check-packaging]
 basepython = python3.7
 deps =
+    setuptools-scm
     wheel
     twine
 commands =
