--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@
 
 Flask==1.1.2
 PyYAML==5.4.1
-SQLAlchemy==1.3.23
+SQLAlchemy[mysql,pymysql]==1.3.23
 Sphinx==3.5.1
 cryptography==3.4.7
 docker==4.4.3
@@ -35,10 +35,8 @@ ipywidgets==7.6.3
 jupyterlab==3.0.9
 langdetect==1.0.8
 matplotlib==3.3.4
-mysqlclient==2.0.3
 numpy==1.20.1
 pandas==1.2.2
-pymysql==1.0.2
 pytest-benchmark==3.2.3
 pytest-cov==2.11.1
 pytest==6.2.2
