--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Flask==1.1.2
 PyYAML==5.4.1
 SQLAlchemy[mysql,pymysql]==1.3.23
 Sphinx==3.5.1
+catalogue==2.0.3
 cryptography==3.4.7
 docker==4.4.3
 dvc[ssh]==2.0.6
