--- a/requirements.txt
+++ b/requirements.txt
@@ -17,39 +17,39 @@
 
 Flask==1.1.2
 PyYAML==5.4.1
-SQLAlchemy[mysql,pymysql]==1.3.23
-Sphinx==3.5.1
+SQLAlchemy[mysql,pymysql]==1.4.8
+Sphinx==3.5.4
 catalogue==2.0.3
 cryptography==3.4.7
-docker==4.4.3
-dvc[ssh]==2.0.6
-h5py==3.1.0
+docker==5.0.0
+dvc[ssh]==2.0.17
+h5py==3.2.1
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_bc5cdr_md-0.4.0.tar.gz
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_bionlp13cg_md-0.4.0.tar.gz
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_craft_md-0.4.0.tar.gz
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_jnlpba_md-0.4.0.tar.gz
-ipython>=7.16.1
+ipython==7.22.0
 ipywidgets==7.6.3
-jupyterlab==3.0.9
+jupyterlab==3.0.14
 langdetect==1.0.8
-matplotlib==3.3.4
-numpy==1.20.1
-pandas==1.2.2
+matplotlib==3.4.1
+numpy==1.20.2
+pandas==1.2.4
 pytest-benchmark==3.2.3
 pytest-cov==2.11.1
-pytest==6.2.2
-python-dotenv==0.15.0
+pytest==6.2.3
+python-dotenv==0.17.0
 requests==2.25.1
-responses==0.12.1
+responses==0.13.2
 scikit-learn==0.24.1
-scipy==1.6.1
+scipy==1..6.2
 scispacy==0.4.0
-sentence-transformers==0.4.1.2
+sentence-transformers==1.0.4
 spacy==3.0.5
 typer==0.3.2
-srsly==2.4.0
+srsly==2.4.1
 sphinx-bluebrain-theme==0.2.4
-torch==1.7.0
-tox==3.22.0
-transformers==4.3.2
+torch==1.8.1
+tox==3.23.0
+transformers==4.5.1
