Fix typo in requirements-data_and_models.txt

--- a/requirements-data_and_models.txt
+++ b/requirements-data_and_models.txt
@@ -23,5 +23,5 @@ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_bionlp
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_craft_md-0.4.0.tar.gz
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_ner_jnlpba_md-0.4.0.tar.gz
 matplotlib==3.4.1
-scipy==1..6.2
+scipy==1.6.2
 transformers==4.5.1
