Update dvc.yaml and dvc.lock

--- a/data_and_models/pipelines/ner/config.cfg
+++ b/data_and_models/pipelines/ner/config.cfg
@@ -146,5 +146,6 @@ components = {}
 tokenizer = {}
 
 [initialize.before_init]
-@callbacks = "copy_vocab_tokenizer"
-source = ${paths.base_model}
+@callbacks = "spacy.copy_from_base_model.v1"
+tokenizer = ${paths.base_model}
+vocab = ${paths.base_model}
