Adapt work from PR #328 to issue #335

--- a/data_and_models/pipelines/ner/config.cfg
+++ b/data_and_models/pipelines/ner/config.cfg
@@ -1,6 +1,4 @@
-# File generated with: spacy init config config.cfg -l en -p ner -o accuracy.
-# Then adapted to resume the training of the NER component of a spaCy pipeline.
-# The base spaCy pipeline is from scispaCy v0.4.0.
+# Initialized with: spacy init config config.cfg -l en -p ner -o accuracy -G.
 
 # Blue Brain Search is a text mining toolbox focused on scientific use cases.
 #
@@ -22,16 +20,15 @@
 [paths]
 train = null
 dev = null
-base_model = null
 
 [system]
-gpu_allocator = null
+gpu_allocator = "pytorch"
 seed = 0
 
 [nlp]
 lang = "en"
-pipeline = ["tok2vec", "tagger", "attribute_ruler", "lemmatizer", "parser", "ner"]
-batch_size = 1000
+pipeline = ["transformer", "ner"]
+batch_size = 128
 disabled = []
 before_creation = null
 after_creation = null
@@ -42,30 +39,53 @@ after_pipeline_creation = null
 
 [components]
 
-[components.tok2vec]
-source = ${paths.base_model}
-
-[components.tagger]
-source = ${paths.base_model}
-
-[components.attribute_ruler]
-source = ${paths.base_model}
-
-[components.lemmatizer]
-source = ${paths.base_model}
-
-[components.parser]
-source = ${paths.base_model}
-
 [components.ner]
-source = ${paths.base_model}
+factory = "ner"
+moves = null
+update_with_oracle_cut_size = 100
+
+[components.ner.model]
+@architectures = "spacy.TransitionBasedParser.v2"
+state_type = "ner"
+extra_state_tokens = false
+hidden_width = 64
+maxout_pieces = 2
+use_upper = false
+nO = null
+
+[components.ner.model.tok2vec]
+@architectures = "spacy-transformers.TransformerListener.v1"
+grad_factor = 1.0
+upstream = "*"
+
+[components.ner.model.tok2vec.pooling]
+@layers = "reduce_mean.v1"
+
+[components.transformer]
+factory = "transformer"
+max_batch_items = 4096
+
+[components.transformer.set_extra_annotations]
+@annotation_setters = "spacy-transformers.null_annotation_setter.v1"
+
+[components.transformer.model]
+@architectures = "spacy-transformers.TransformerModel.v1"
+name = "../../models/sentence_embedding/biobert_nli_sts_cord19_v1/0_Transformer/"
+
+[components.transformer.model.get_spans]
+@span_getters = "spacy-transformers.strided_spans.v1"
+window = 128
+stride = 96
+
+[components.transformer.model.tokenizer_config]
+use_fast = true
 
 [corpora]
 
 [corpora.train]
 @readers = "spacy.Corpus.v1"
 path = ${paths.train}
-max_length = 2000
+max_length = 500
 gold_preproc = false
 limit = 0
 augmenter = null
@@ -83,27 +103,21 @@ train_corpus = "corpora.train"
 dev_corpus = "corpora.dev"
 seed = ${system.seed}
 gpu_allocator = ${system.gpu_allocator}
-dropout = 0.2
-accumulate_gradient = 1
+dropout = 0.1
+accumulate_gradient = 3
 patience = 1600
 max_epochs = 0
 max_steps = 20000
 eval_frequency = 200
-frozen_components =  ["tok2vec", "tagger", "attribute_ruler", "lemmatizer", "parser"]
+frozen_components = []
 before_to_disk = null
 
 [training.batcher]
-@batchers = "spacy.batch_by_words.v1"
-discard_oversize = false
-tolerance = 0.2
+@batchers = "spacy.batch_by_padded.v1"
+discard_oversize = true
+size = 2000
+buffer = 256
 get_length = null
-
-[training.batcher.size]
-@schedules = "compounding.v1"
-start = 100
-stop = 1000
-compound = 1.001
-t = 0.0
 
 [training.logger]
 @loggers = "spacy.ConsoleLogger.v1"
@@ -118,17 +132,14 @@ L2 = 0.01
 grad_clip = 1.0
 use_averages = false
 eps = 0.00000001
-learn_rate = 0.001
+
+[training.optimizer.learn_rate]
+@schedules = "warmup_linear.v1"
+warmup_steps = 250
+total_steps = 20000
+initial_rate = 0.00005
 
 [training.score_weights]
-tag_acc = null
-lemma_acc = null
-dep_uas = null
-dep_las = null
-dep_las_per_type = null
-sents_f = null
-sents_p = null
-sents_r = null
 ents_per_type = null
 ents_f = 1.0
 ents_p = 0.0
@@ -141,10 +152,7 @@ vectors = null
 init_tok2vec = null
 vocab_data = null
 lookups = null
+before_init = null
 after_init = null
 components = {}
 tokenizer = {}
-
-[initialize.before_init]
-@callbacks = "copy_vocab_tokenizer"
-source = ${paths.base_model}
