--- a/data_and_models/pipelines/ner/dvc.yaml
+++ b/data_and_models/pipelines/ner/dvc.yaml
@@ -1,5 +1,6 @@
 stages:
   convert_annotations:
+    # FIXME Move stages converting annotations to one model per entity.
     foreach:
       - annotations5_EmmanuelleLogette_2020-06-30_raw2_Disease
       - annotations6_EmmanuelleLogette_2020-07-07_raw4_TaxonChebi
@@ -23,41 +24,44 @@ stages:
         - ../../annotations/ner/${item}.train.spacy
         - ../../annotations/ner/${item}.dev.spacy
   training:
+    # FIXME Use in the training stages the new files with one model per entity.
     foreach:
-       model1:
-         annotation_filename: annotations5_EmmanuelleLogette_2020-06-30_raw2_Disease
-         base_model: en_ner_bc5cdr_md
-       model2:
-         annotation_filename: annotations14_EmmanuelleLogette_2020-09-02_raw8_CellCompartmentDrugOrgan
-         base_model: en_ner_bionlp13cg_md
-       model3:
-         annotation_filename: annotations6_EmmanuelleLogette_2020-07-07_raw4_TaxonChebi
-         base_model: en_ner_craft_md
-       model4:
-         annotation_filename: annotations9_EmmanuelleLogette_2020-07-08_raw6_CelltypeProtein
-         base_model: en_ner_jnlpba_md
-       model5:
-         annotation_filename: annotations15_EmmanuelleLogette_2020-09-22_raw9_Pathway
-         base_model: en_ner_craft_md
+      model-cell_compartment:
+        annotation_filename: annotations14_EmmanuelleLogette_2020-09-02_raw8_CellCompartmentDrugOrgan
+      model-cell_type:
+        annotation_filename: annotations9_EmmanuelleLogette_2020-07-08_raw6_CelltypeProtein
+      model-chemical:
+        annotations6_EmmanuelleLogette_2020-07-07_raw4_TaxonChebi
+      model-disease:
+        annotation_filename: annotations5_EmmanuelleLogette_2020-06-30_raw2_Disease
+      model-drug:
+        annotation_filename: annotations14_EmmanuelleLogette_2020-09-02_raw8_CellCompartmentDrugOrgan
+      model-organ:
+        annotation_filename: annotations14_EmmanuelleLogette_2020-09-02_raw8_CellCompartmentDrugOrgan
+      model-organism:
+        annotation_filename: annotations6_EmmanuelleLogette_2020-07-07_raw4_TaxonChebi
+      model-pathway:
+        annotation_filename: annotations15_EmmanuelleLogette_2020-09-22_raw9_Pathway
+      model-protein:
+        annotation_filename: annotations9_EmmanuelleLogette_2020-07-08_raw6_CelltypeProtein
     do:
       cmd: >-
         python -m spacy train
         config.cfg
         --output ../../models/ner/${key}/
-        --code initialize.py
+        --gpu-id 0
         --paths.train ../../annotations/ner/${item.annotation_filename}.train.spacy
         --paths.dev ../../annotations/ner/${item.annotation_filename}.dev.spacy
-        --paths.base_model ${item.base_model}
         &&
         python patch.py ../../models/ner/${key}/model-best/vocab/strings.json
       deps:
       - Dockerfile
       - config.cfg
-      - initialize.py
       - ../../annotations/ner/${item.annotation_filename}.train.spacy
       - ../../annotations/ner/${item.annotation_filename}.dev.spacy
       outs:
       - ../../models/ner/${key}/model-best/
+  # FIXME Move stages adding the EntityRuler to one model per entity.
   add_er_1:
     cmd: python add_er.py --model ../../models/ner/model1/model-best/ --etypes disease --patterns_file ../../annotations/ner/rule_based_patterns.jsonl
       --output_file ../../models/ner_er/model1
@@ -123,6 +127,7 @@ stages:
     outs:
     - ../../models/ner_er/model5
   evaluation:
+    # Move stages doing the evaluation to one model per entity.
     foreach:
       disease:
         model_name: model1
@@ -186,4 +191,3 @@ stages:
         cache: false
     - ../../metrics/ner/interrater/protein.json:
         cache: false
-
