--- a/data_and_models/models/ner_er/.gitignore
+++ b/data_and_models/models/ner_er/.gitignore
@@ -15,8 +15,12 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with this program. If not, see <https://www.gnu.org/licenses/>.
 
-/model1
-/model2
-/model3
-/model4
-/model5
+/model-cell_compartment
+/model-cell_type
+/model-chemical
+/model-disease
+/model-drug
+/model-organ
+/model-organism
+/model-pathway
+/model-protein
