Add new .spacy files to .gitignore

--- a/data_and_models/annotations/ner/.gitignore
+++ b/data_and_models/annotations/ner/.gitignore
@@ -40,3 +40,21 @@
 /annotations_organism.jsonl
 /annotations_pathway.jsonl
 /annotations_protein.jsonl
+/annotations_cell_compartment.dev.spacy
+/annotations_cell_compartment.train.spacy
+/annotations_cell_type.dev.spacy
+/annotations_cell_type.train.spacy
+/annotations_chemical.dev.spacy
+/annotations_chemical.train.spacy
+/annotations_disease.dev.spacy
+/annotations_disease.train.spacy
+/annotations_drug.dev.spacy
+/annotations_drug.train.spacy
+/annotations_organ.dev.spacy
+/annotations_organ.train.spacy
+/annotations_organism.dev.spacy
+/annotations_organism.train.spacy
+/annotations_pathway.dev.spacy
+/annotations_pathway.train.spacy
+/annotations_protein.dev.spacy
+/annotations_protein.train.spacy
