Add Lemmatizer for patterns from EntityRuler

--- a/data_and_models/pipelines/ner/config.cfg
+++ b/data_and_models/pipelines/ner/config.cfg
@@ -1,4 +1,4 @@
-# Initialized with: spacy init config config.cfg -l en -p ner -o accuracy -G.
+# Initialized with: spacy init config config.cfg -l en -p lemmatizer,ner -o accuracy -G.
 
 # Blue Brain Search is a text mining toolbox focused on scientific use cases.
 #
@@ -27,7 +27,7 @@ seed = 0
 
 [nlp]
 lang = "en"
-pipeline = ["transformer", "ner"]
+pipeline = ["transformer", "lemmatizer", "ner"]
 batch_size = 128
 disabled = []
 before_creation = null
@@ -38,6 +38,12 @@ after_pipeline_creation = null
 @tokenizers = "spacy.Tokenizer.v1"
 
 [components]
+
+[components.lemmatizer]
+factory = "lemmatizer"
+mode = "lookup"
+overwrite = false
+model = null
 
 [components.ner]
 factory = "ner"
@@ -140,6 +146,7 @@ total_steps = 20000
 initial_rate = 0.00005
 
 [training.score_weights]
+lemma_acc = null
 ents_per_type = null
 ents_f = 1.0
 ents_p = 0.0
