Configure isort in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -48,7 +48,7 @@ deps =
     sqlalchemy-stubs==0.4
 commands =
     flake8 {[tox]source} tests benchmarks
-    isort --honor-noqa --profile black --check setup.py {[tox]source} tests benchmarks
+    isort --check setup.py {[tox]source} tests benchmarks
     pydocstyle {[tox]source}
     black -q --check setup.py {[tox]source} tests benchmarks
     bandit -qr {[tox]source}
@@ -62,7 +62,7 @@ deps =
     black==20.8b1
     isort==5.7.0
 commands =
-    isort --honor-noqa --profile=black setup.py {[tox]source} tests benchmarks
+    isort setup.py {[tox]source} tests benchmarks
     black setup.py {[tox]source} tests benchmarks
 
 [testenv:docs]
@@ -144,3 +144,7 @@ extend-ignore = E203
 
 [pydocstyle]
 convention = numpy
+
+[isort]
+profile = black
+honor_noqa = true
