Add new flake8 plugins, remove pydocstyle from tox

--- a/tox.ini
+++ b/tox.ini
@@ -40,16 +40,17 @@ skip_install = true
 deps =
     bandit==1.7.0
     black==20.8b1
-    flake8==3.8.4
+    flake8==3.9.2
+    flake8-bugbear==21.4.3
+    flake8-comprehensions==3.5.0
+    flake8-docstrings==1.6.0
     isort==5.7.0
-    pydocstyle==5.1.1
     mypy==0.812
     pandas-stubs==1.0.4.5
     sqlalchemy-stubs==0.4
 commands =
     flake8 {[tox]source} tests benchmarks
     isort --check setup.py {[tox]source} tests benchmarks
-    pydocstyle {[tox]source}
     black -q --check setup.py {[tox]source} tests benchmarks
     bandit -qr {[tox]source}
     mypy --config-file .mypy.ini  setup.py {[tox]source} tests
@@ -141,9 +142,10 @@ show_missing = False
 count = False
 max-line-length = 88
 extend-ignore = E203
-
-[pydocstyle]
-convention = numpy
+docstring-convention = numpy
+per-file-ignores =
+    tests/*:D
+    benchmarks/*:D
 
 [isort]
 profile = black
