Streamline command arguments in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@
 [tox]
 minversion = 3.1.0
 requires = virtualenv >= 20.0.0
-source = src/bluesearch
+sources = setup.py src/bluesearch tests benchmarks
 envlist =
     lint
     py37
@@ -49,12 +49,11 @@ deps =
     pandas-stubs==1.1.0.6
     sqlalchemy-stubs==0.4
 commands =
-    flake8 {[tox]source} tests benchmarks
-    isort --check setup.py {[tox]source} tests benchmarks
-    black -q --check setup.py {[tox]source} tests benchmarks
-    bandit -qr {[tox]source}
-    mypy --config-file .mypy.ini  setup.py {[tox]source} tests
-    mypy --config-file .mypy.ini  {[tox]source} benchmarks
+    flake8 {posargs:{[tox]sources}}
+    isort --check {posargs:{[tox]sources}}
+    black -q --check {posargs:{[tox]sources}}
+    bandit -qr --exclude "benchmarks/,tests/" {posargs:{[tox]sources}}
+    mypy --config-file .mypy.ini --exclude "benchmarks/conftest.py" {posargs:{[tox]sources}}
 
 [testenv:format]
 basepython = python3.7
@@ -63,8 +62,8 @@ deps =
     black==21.5b1
     isort==5.8.0
 commands =
-    isort setup.py {[tox]source} tests benchmarks
-    black setup.py {[tox]source} tests benchmarks
+    isort {posargs:{[tox]sources}}
+    black {posargs:{[tox]sources}}
 
 [testenv:docs]
 basepython = python3.7
