Remove unnecessary mypy argument, streamline envlist

--- a/tox.ini
+++ b/tox.ini
@@ -19,13 +19,7 @@
 minversion = 3.1.0
 requires = virtualenv >= 20.0.0
 sources = setup.py src/bluesearch tests benchmarks
-envlist =
-    lint
-    py37
-    py38
-    py39
-    docs
-    check-packaging
+envlist = lint, py{37, 38, 39}, docs, check-packaging
 
 [testenv]
 download = true
@@ -53,7 +47,7 @@ commands =
     isort --check {posargs:{[tox]sources}}
     black -q --check {posargs:{[tox]sources}}
     bandit -qr --exclude "benchmarks/,tests/" {posargs:{[tox]sources}}
-    mypy --config-file .mypy.ini --exclude "benchmarks/conftest.py" {posargs:{[tox]sources}}
+    mypy --exclude "benchmarks/conftest.py" {posargs:{[tox]sources}}
 
 [testenv:format]
 basepython = python3.7
