--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,7 @@ deps =
 commands =
     flake8 {posargs:{[tox]sources}}
     isort --check {posargs:{[tox]sources}}
-    black -q --check {posargs:{[tox]sources}}
+    black --check {posargs:{[tox]sources}}
     bandit -qr --exclude "benchmarks/,tests/" {posargs:{[tox]sources}}
     mypy --exclude "benchmarks/conftest.py" {posargs:{[tox]sources}}
 
