--- a/data_and_models/pipelines/ner/config.cfg
+++ b/data_and_models/pipelines/ner/config.cfg
@@ -85,10 +85,10 @@ seed = ${system.seed}
 gpu_allocator = ${system.gpu_allocator}
 dropout = 0.2
 accumulate_gradient = 1
-patience = 1600
-max_epochs = 0
-max_steps = 20000
-eval_frequency = 200
+patience = 800  # steps, 4 evaluations if every 200
+max_epochs = 500  # epochs, huge value to be investigated
+max_steps = 0  # ignored when 0
+eval_frequency = 200  # if changed, change patience too
 frozen_components =  ["tok2vec", "tagger", "attribute_ruler", "lemmatizer", "parser"]
 before_to_disk = null
 
@@ -118,7 +118,7 @@ L2 = 0.01
 grad_clip = 1.0
 use_averages = false
 eps = 0.00000001
-learn_rate = 0.001
+learn_rate = 0.00005
 
 [training.score_weights]
 tag_acc = null
