--- a/data_and_models/pipelines/ner/dvc.yaml
+++ b/data_and_models/pipelines/ner/dvc.yaml
@@ -54,70 +54,27 @@ stages:
       - ../../annotations/ner/${item.annotation_filename}.dev.spacy
       outs:
       - ../../models/ner/${key}/model-best/
-  add_er_1:
-    cmd: python add_er.py --model ../../models/ner/model1/model-best/ --etypes disease --patterns_file ../../annotations/ner/rule_based_patterns.jsonl
-      --output_file ../../models/ner_er/model1
-    deps:
-    - Dockerfile
-    - ../../models/ner/model1/model-best/
-    - add_er.py
-    - ../../annotations/ner/rule_based_patterns.jsonl
-    params:
-    - eval.disease
-    outs:
-    - ../../models/ner_er/model1
-  add_er_2:
-    cmd: python add_er.py --model ../../models/ner/model2/model-best/ --etypes cell_compartment,drug,organ --patterns_file ../../annotations/ner/rule_based_patterns.jsonl
-      --output_file ../../models/ner_er/model2
-    deps:
-    - Dockerfile
-    - ../../models/ner/model2/model-best/
-    - add_er.py
-    - ../../annotations/ner/rule_based_patterns.jsonl
-    params:
-    - eval.cell_compartment
-    - eval.drug
-    - eval.organ
-    outs:
-    - ../../models/ner_er/model2
-  add_er_3:
-    cmd: python add_er.py --model ../../models/ner/model3/model-best/ --etypes chemical,organism --patterns_file ../../annotations/ner/rule_based_patterns.jsonl
-      --output_file ../../models/ner_er/model3
-    deps:
-    - Dockerfile
-    - ../../models/ner/model3/model-best/
-    - add_er.py
-    - ../../annotations/ner/rule_based_patterns.jsonl
-    params:
-    - eval.chemical
-    - eval.organism
-    outs:
-    - ../../models/ner_er/model3
-  add_er_4:
-    cmd: python add_er.py --model ../../models/ner/model4/model-best/ --etypes cell_type,protein --patterns_file ../../annotations/ner/rule_based_patterns.jsonl
-      --output_file ../../models/ner_er/model4
-    deps:
-    - Dockerfile
-    - ../../models/ner/model4/model-best/
-    - add_er.py
-    - ../../annotations/ner/rule_based_patterns.jsonl
-    params:
-    - eval.cell_type
-    - eval.protein
-    outs:
-    - ../../models/ner_er/model4
-  add_er_5:
-    cmd: python add_er.py --model ../../models/ner/model5/model-best/ --etypes pathway --patterns_file ../../annotations/ner/rule_based_patterns.jsonl
-      --output_file ../../models/ner_er/model5
-    deps:
-    - Dockerfile
-    - ../../models/ner/model5/model-best/
-    - add_er.py
-    - ../../annotations/ner/rule_based_patterns.jsonl
-    params:
-    - eval.pathway
-    outs:
-    - ../../models/ner_er/model5
+  add_er:
+    foreach:
+      - cell_compartment
+      - cell_type
+      - chemical
+      - disease
+      - drug
+      - organ
+      - organism
+      - pathway
+      - protein
+    do:
+      cmd: python add_er.py --model ../../models/ner/model-${item}/model-best/ --patterns_file ../../annotations/ner/rule_based_patterns.jsonl
+        --output_file ../../models/ner_er/model-${item}
+      deps:
+      - Dockerfile
+      - ../../models/ner/model-${item}/model-best/
+      - add_er.py
+      - ../../annotations/ner/rule_based_patterns.jsonl
+      outs:
+      - ../../models/ner_er/model-${item}
   evaluation:
     foreach:
       disease:
